# Connexus

./: .gitignore  Bounds.hs  Connexus.hs  Connexus2.hs  Constraint.hs  ConstraintGUI.hs  Direction.hs  Edge.hs  Empty.hs  Graph.hs  Graph2.hs  Grid.hs  Grid2.hs  Interval.hs  LICENSE  Life.hs  Lock.hs  Main.hs  Misc.hs  Path.hs  Path2.hs  Physical.hs  PriorityQueue.hs  Rectangle.hs  Rounding.hs  StrokeSet.hs  TODO  TrieCache.hs  Viewport.hs  Viewport2.hs  connexus.cabal
