Name:                connexus
Version:             0.0
Synopsis:            a small puzzle game
-- Description: TODO
Homepage:            http://dmwit.com/connexus
License:             BSD3
License-file:        LICENSE
Author:              Daniel Wagner
Maintainer:          daniel@wagner-home.com
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.2
Executable connexus
    Main-is: Connexus.hs
    Build-depends:
        array >= 0.2,
        base >= 3 && < 5,
        cairo >= 0.10,
        containers >= 0.2,
        data-default >= 0.2,
        gtk >= 0.10,
        MonadRandom >= 0.1,
        mtl >= 1.1,
        random >= 1.0,
        time >= 1.1

Executable constraint
    Main-is: ConstraintGUI.hs
    Build-depends:
        array >= 0.2,
        base >= 3 && < 5,
        cairo >= 0.10,
        containers >= 0.2,
        data-default >= 0.2,
        gtk >= 0.10,
        MonadRandom >= 0.1,
        mtl >= 1.1,
        random >= 1.0,
        time >= 1.1
