Name:                connexus
Version:             0.0
Synopsis:            a small puzzle game
-- Description: TODO
Homepage:            http://dmwit.com/connexus
License:             BSD3
License-file:        LICENSE
Author:              Daniel Wagner
Maintainer:          daniel@wagner-home.com
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.2
Executable connexus
    Main-is: Connexus.hs
    Build-depends:
        array >= 0.2,
        base >= 3 && < 5,
        cairo >= 0.10,
        containers >= 0.2,
        data-default >= 0.2,
        gtk >= 0.10,
        MonadRandom >= 0.1,
        monoid-extras >= 0.3,
        mtl >= 1.1,
        random >= 1.0,
        time >= 1.1,
        tuple >= 0.2,
        universe >= 0.3
    Other-Modules:
        Bounds
        Direction
        Graph
        Grid
        Interval
        Life
        Lock
        Misc
        Rectangle
        Rounding
        TrieCache
        Viewport
    Ghc-Options: -fno-warn-tabs

Executable constraint
    Main-is: ConstraintGUI.hs
    Build-depends:
        array >= 0.2,
        base >= 3 && < 5,
        cairo >= 0.10,
        containers >= 0.2,
        data-default >= 0.2,
        fgl >= 5.6,
        gtk >= 0.10,
        MonadRandom >= 0.1,
        mtl >= 1.1,
        random >= 1.0,
        time >= 1.1,
        universe >= 0.3
    Other-Modules:
        Bounds
        Constraint
        Direction
        Graph
        Grid
        Interval
        Life
        Misc
        Rectangle
        Rounding
        TrieCache
        Viewport
    Ghc-Options: -fno-warn-tabs
